Fixed a tiny bug in the CSS file.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@58599 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -48,12 +48,12 @@
 	margin: 0 5px 0 -17px;
 }
 
-.active {
+.feed-stats-tabs .active {
 	border: 1px solid #999999 !important;
 	border-bottom: 1px solid #ffffff !important;
 }
 
-.active span {
+.feed-stats-tabs .active span {
 	color: #000000;
 	font-weight: bold;
 }
